plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hr-handlers'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// queryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// swagger
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework:spring-messaging'

	implementation 'org.springframework.boot:spring-boot-starter-web'

	compileOnly 'org.projectlombok:lombok'

	annotationProcessor 'org.projectlombok:lombok'

	// mapstruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// mybatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// excel
	implementation 'org.apache.poi:poi:5.2.3'        // HSSF (for .xls files)
	implementation 'org.apache.poi:poi-ooxml:5.2.3'  // XSSF (for .xlsx files)

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//S3bucket
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation platform('software.amazon.awssdk:bom:2.20.0') // 최신 BOM 버전
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:sts'

	//jsoup
	implementation 'org.jsoup:jsoup:1.18.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
